TestSuite/errors/err0506.pas
//!Обобщённая функция p1 не может быть вызвана с данным набором фактических параметров
procedure p1<T1>(d: T1->()) := exit;

function f(b: byte) := 0;

begin
  p1(f);
end.